Revert "DOCS: Use org-babel blocks for README examples"
This reverts commit a3ee02be6efc354534a7b9847caa588e91ee13dd. GitHub
is unable to render babel source blocks cleanly.

--- a/README.org
+++ b/README.org
@@ -48,19 +48,16 @@
     customising the variable =org2blog/wp-blog-alist=.
 
     For example:
-
-    #+begin_src emacs-lisp
-      (setq org2blog/wp-blog-alist
-            '(("wordpress"
-               :url "http://username.wordpress.com/xmlrpc.php"
-               :username "username"
-               :default-title "Hello World"
-               :default-categories ("org2blog" "emacs")
-               :tags-as-categories nil)
-              ("my-blog"
-               :url "http://username.server.com/xmlrpc.php"
-               :username "admin")))
-    #+end_src
+    : (setq org2blog/wp-blog-alist
+    :       '(("wordpress"
+    :          :url "http://username.wordpress.com/xmlrpc.php"
+    :          :username "username"
+    :          :default-title "Hello World"
+    :          :default-categories ("org2blog" "emacs")
+    :          :tags-as-categories nil)
+    :         ("my-blog"
+    :          :url "http://username.server.com/xmlrpc.php"
+    :          :username "admin")))
 
     This defines two blogs identified by the terms =wordpress= and
     =my-blog=.
@@ -80,14 +77,13 @@
 
     Then, use these details, as shown below.
 
-    #+begin_src emacs-lisp
-      (setq blog (netrc-machine (netrc-parse "~/.netrc") "myblog" t))
-      (setq org2blog/wp-blog-alist
-            '(("my-blog"
-               :url "http://username.server.com/xmlrpc.php"
-               :username (netrc-get blog "login")
-               :password (netrc-get blog "password"))))
-    #+end_src
+    : (setq blog (netrc-machine (netrc-parse "~/.netrc") "myblog" t))
+    : (setq org2blog/wp-blog-alist
+    :       '(("my-blog"
+    :          :url "http://username.server.com/xmlrpc.php"
+    :          :username (netrc-get blog "login")
+    :          :password (netrc-get blog "password"))))
+
 
     To browse or customize other variables use the customize group
     function.
