--- a/README.org
+++ b/README.org
@@ -32,13 +32,15 @@
   to your dot emacs.
 
 *** Dependencies
-    1. org2blog depends on /xml-rpc/ available at [[http://launchpad.net/xml-rpc-el][Launchpad]].  Add it
-       to your /load-path/ before using org2blog.
+    1. org2blog depends on
+       - /xml-rpc/ available at [[http://launchpad.net/xml-rpc-el][Launchpad]]
+       - /metaweblog.el/ available [[https://github.com/punchagan/metaweblog][here]]
+
+       Add them to your /load-path/ before using org2blog.
 
     2. Make sure you have the latest org-mode installed. It may work
        with versions > 7, but it is best to have the latest org-mode
        if you can.
-
 
 * Usage
 *** Defining your blog setup
