--- a/tests/tests.org
+++ b/tests/tests.org
@@ -68,6 +68,46 @@
   - [ ] #12 still having trouble with #+PARENT
     https://github.com/punchagan/org2blog/issues/12
 
+  - [X] #133 experimental branch exports only sparse subtree
+    https://github.com/punchagan/org2blog/issues/133
+
+  #+NAME: o2b-test-post-buffer-non-visible-input
+  #+BEGIN_SRC org
+    ,#+BLOG: localhost
+    ,#+POSTID: 121
+    ,#+DATE: [2013-09-14 Sat 18:29]
+    ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
+    ,#+CATEGORY: org2blog, emacs
+    ,#+TAGS:
+    ,#+DESCRIPTION:
+    ,#+TITLE: Hello World
+    ,* Heading 1
+      Text
+
+    ,** Heading 2
+       More text
+
+  #+END_SRC
+
+  #+NAME: o2b-test-post-buffer-non-visible
+  #+BEGIN_SRC html
+    <div id="outline-container-sec-1" class="outline-2">
+    <h2 id="sec-1">Heading 1</h2>
+    <div class="outline-text-2" id="text-1">
+    <p> Text </p>
+    </div>
+
+    <div id="outline-container-sec-1-1" class="outline-3">
+    <h3 id="sec-1-1">Heading 2</h3>
+    <div class="outline-text-3" id="text-1-1">
+    <p> More text </p>
+    </div>
+    </div>
+    </div>
+
+  #+END_SRC
+
+
 * LaTeX issues
   - [X] #9 another error in latex
     https://github.com/punchagan/org2blog/issues/9
