--- a/tests/tests.org
+++ b/tests/tests.org
@@ -107,7 +107,42 @@
 
   #+END_SRC
 
+  #+NAME: o2b-test-post-buffer-hangs-input
+  #+BEGIN_SRC org
+    ,#+BLOG: localhost
+    ,#+POSTID: 127
+    ,#+DATE: [2013-09-14 Sat 20:14]
+    ,#+OPTIONS: toc:nil num:nil todo:nil pri:nil tags:nil ^:nil
+    ,#+CATEGORY: org2blog, emacs
+    ,#+TAGS:
+    ,#+DESCRIPTION:
+    ,#+TITLE: Test Hangs
+    ,* Heading
 
+    ,** Preparing patches
+
+    The Org-mode mailing list has a [[http://patchwork.newartisans.com/project/org-mode/][Patchwork server]] that looks for
+    patches in messages that contain the string =[PATCH]= in the subject.
+    Make sure both the =master= and =jasond= branches are up-to-date and
+    then type the following to get a diff that can be inserted into the
+    =[PATCH]= email:
+
+  #+END_SRC
+
+  #+NAME: o2b-test-post-buffer-hangs
+  #+BEGIN_SRC html
+    <div id="outline-container-sec-1" class="outline-2">
+    <h2 id="sec-1">Heading</h2>
+    <div class="outline-text-2" id="text-1">
+    </div><div id="outline-container-sec-1-1" class="outline-3">
+    <h3 id="sec-1-1">Preparing patches</h3>
+    <div class="outline-text-3" id="text-1-1">
+    <p> The Org-mode mailing list has a <a href="http://patchwork.newartisans.com/project/org-mode/">Patchwork server</a> that looks for patches in messages that contain the string <code>[PATCH]</code> in the subject. Make sure both the <code>master</code> and <code>jasond</code> branches are up-to-date and then type the following to get a diff that can be inserted into the <code>[PATCH]</code> email: </p>
+    </div>
+    </div>
+    </div>
+
+  #+END_SRC
 * LaTeX issues
   - [X] #9 another error in latex
     https://github.com/punchagan/org2blog/issues/9
